[gd_scene load_steps=15 format=2]

[ext_resource path="res://Resources/SignalTypes/LightSignalMaterial.tres" type="Material" id=1]
[ext_resource path="res://Resources/SignalTypes/Hl/Hl-Sig.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Resources/SignalTypes/Hl/Hl.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0.658824, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0.513726, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
radius = 0.05
height = 0.1

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.992157, 0.658824, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0.843137, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SphereMesh" id=4]
radius = 0.3
height = 0.6
radial_segments = 6
rings = 3

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.00392157, 1, 0.0196078, 1 )
emission_enabled = true
emission = Color( 0.196078, 1, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.0588235, 0.992157, 0.027451, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.0392157, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0.00392157, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=8]
radius = 0.05
height = 0.1

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.992157, 0.0941176, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SphereMesh" id=10]
radius = 0.3
height = 0.6
radial_segments = 6
rings = 3

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.550892, 2.87686, 0.324287 )

[node name="VisualInstance" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.667 )
material_override = ExtResource( 1 )
mesh = ExtResource( 2 )

[node name="Orange2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.098472, 3.58718, 1.85742 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Orange2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="Orange1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.098472, 4.21936, 1.85742 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Orange1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="Green1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0964804, 4.21856, 2.07726 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="Green1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )

[node name="Red" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0979431, 3.90113, 1.96757 )
material_override = SubResource( 7 )
cast_shadow = 0
mesh = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="Red"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 9 )
mesh = SubResource( 10 )

[node name="GreenStripe" type="Spatial" parent="."]

[node name="Green1" type="MeshInstance" parent="GreenStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0964804, 3.33877, 1.77063 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="GreenStripe/Green1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )

[node name="Green2" type="MeshInstance" parent="GreenStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0964804, 3.33877, 1.87091 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="GreenStripe/Green2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )

[node name="Green3" type="MeshInstance" parent="GreenStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0964804, 3.33877, 1.9712 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="GreenStripe/Green3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )

[node name="Green4" type="MeshInstance" parent="GreenStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0964804, 3.33877, 2.07089 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="GreenStripe/Green4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )

[node name="Green5" type="MeshInstance" parent="GreenStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.0964804, 3.33877, 2.17117 )
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="GreenStripe/Green5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )

[node name="OrangeStripe" type="Spatial" parent="."]

[node name="Orange1" type="MeshInstance" parent="OrangeStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.098472, 3.2067, 1.77121 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="OrangeStripe/Orange1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="Orange2" type="MeshInstance" parent="OrangeStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.098472, 3.2067, 1.87094 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="OrangeStripe/Orange2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="Orange3" type="MeshInstance" parent="OrangeStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.098472, 3.2067, 1.97067 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="OrangeStripe/Orange3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="Orange4" type="MeshInstance" parent="OrangeStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.098472, 3.2067, 2.0704 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="OrangeStripe/Orange4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="Orange5" type="MeshInstance" parent="OrangeStripe"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, -0.098472, 3.2067, 2.17013 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="OrangeStripe/Orange5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="SelectCollider" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.37803, -1.33251, 1.65292 )

[node name="AabbShape" type="CollisionShape" parent="SelectCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.550892, 2.87686, 0.324287 )
shape = SubResource( 11 )
